src/objects/Error_Message__c.object
<CustomObject>
    <description>Used to store the error message from apex class , all the exception from any one of the class is captured in the object</description>
    <fields>
        <fullName>Additional_Serialized_Object__c</fullName>
        <label>Additional Serialized Object</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Used to capture the class name</description>
        <label>Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Cause__c</fullName>
        <description>Used to store the error cause</description>
        <label>Error Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Used to store the Exception_Message from the class</description>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Used to capture which line number at cause the issues</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEDI_Application_Id__c</fullName>
        <description>This field created to hold the Pedi application Id</description>
        <label>PEDI Application Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_user__c</fullName>
        <description>This field is to hold the current running User name at the time of a exceptions occurred</description>
        <label>Running user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialized_Class__c</fullName>
        <label>Serialized Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <type>TextArea</type>
    </fields>
    <label>Error Message</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Error Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>